--- a/react-app/src/App.css
+++ b/react-app/src/App.css
@@ -1,7 +1,3 @@
-.test {
-  background-color: aqua;
-  color: black;
-  font-size: 48px;
-  font-weight: bold;
-  padding: 16px;
+Mycomponent {
+  background-color: blueviolet;
 }
