--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -1,8 +1,7 @@
+@import url(//fonts.googleapis.com/earlyaccess/nanumgothiccoding.css);
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+  font-family: "Nanum Gothic Coding", monospace;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: aqua;
@@ -11,4 +10,8 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+.nanumgothiccoding * {
+  font-family: "Nanum Gothic Coding", monospace;
 }
